--- a/privacy.html
+++ b/privacy.html
@@ -24,7 +24,7 @@
     <li>We collect the minimum data needed to operate the App and process in-app purchases.</li>
     <li>We do <strong>not</strong> sell or share your personal information for cross-context behavioral advertising.</li>
     <li>The App does not use third-party advertising or tracking.</li>
-    <li>Questions? Contact <a href="mailto:pine5510@vandals.uidaho.edu">pine5510@vandals.uidaho.edu</a>.</li>
+    <li>Questions? Contact <a href="mailto:visionboard360team@gmail.com">visionboard360team@gmail.com</a>.</li>
   </ul>
 
   <h2>Information We Collect</h2>
@@ -57,7 +57,7 @@
   <p>We keep information only as long as needed to provide the App and meet legal obligations. If you enable cloud sync, you may delete your content using your cloud provider’s tools. You may request deletion of support records at any time.</p>
 
   <h2>Your Rights</h2>
-  <p>Depending on your region, you may have rights to access, correct, delete, or restrict use of your data. To exercise these rights, email <a href="mailto:pine5510@vandals.uidaho.edu">pine5510@vandals.uidaho.edu</a>.</p>
+  <p>Depending on your region, you may have rights to access, correct, delete, or restrict use of your data. To exercise these rights, email <a href="mailto:visionboard360team@gmail.com">visionboard360team@gmail.com</a>.</p>
 
   <h2>Security</h2>
   <p>We use reasonable safeguards to protect information. No method of transmission or storage is 100% secure.</p>
@@ -72,7 +72,7 @@
   <p>We may update this Policy. We will change the “Effective” date and, where required, provide notice in the App.</p>
 
   <h2>Contact</h2>
-  <p>Contact: <a href="mailto:pine5510@vandals.uidaho.edu">pine5510@vandals.uidaho.edu</a>.</p>
+  <p>Contact: <a href="mailto:visionboard360team@gmail.com">visionboard360team@gmail.com</a>.</p>
 
   <hr>
   <p class="muted"><small>This is a general privacy disclosure for a consumer app and is not legal advice.</small></p>
