--- a/terms.html
+++ b/terms.html
@@ -71,7 +71,7 @@
   <p>Your use of the App is also subject to Apple’s <a href="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/">Licensed Application End User License Agreement (EULA)</a>. If there is a conflict, Apple’s EULA will control for matters it covers.</p>
 
   <h2>14) Contact</h2>
-  <p>Support & legal: <a href="mailto:pine5510@vandals.uidaho.edu">pine5510@vandals.uidaho.edu</a>.</p>
+  <p>Support & legal: <a href="mailto:visionboard360team@gmail.com">visionboard360team@gmail.com</a>.</p>
 
   <hr>
   <p class="muted"><small>These Terms are a general template for a consumer app and are not legal advice.</small></p>
