--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <header>
   <h1>VisionBoard 360 — Support</h1>
   <nav>
-    <a href="./index.html">Support (Home)</a>
+    <a href="./index.html">Support</a>
     <a href="./privacy.html">Privacy</a>
     <a href="./terms.html">Terms</a>
   </nav>
@@ -45,8 +45,7 @@
     <section class="card">
       <h2>FAQs</h2>
       <ul>
-        <li><strong>Restore purchase:</strong> In the app, open the paywall and tap <em>Restore Purchases</em>.</li>
-        <li><strong>Free vs. paid:</strong> Free lets you create a basic board and try core features. The one-time unlock ($9.99) gives unlimited boards, premium effects, cloud sync across devices, and priority support.</li>
+        <li><strong>Restore purchase:</strong> When onboarding tap <em>Restore Purchases</em>.</li>
         <li><strong>Photos access:</strong> iOS Settings → Privacy &amp; Security → Photos → VisionBoard 360 → choose <em>Selected Photos</em> or <em>None</em>.</li>
       </ul>
     </section>
