--- a/privacy.html
+++ b/privacy.html
@@ -29,7 +29,7 @@
 <header>
   <h1>Privacy Policy</h1>
   <nav>
-    <a href="./index.html">Support (Home)</a>
+    <a href="./index.html">Support</a>
     <a href="./privacy.html">Privacy</a>
     <a href="./terms.html">Terms</a>
   </nav>
