--- a/index.html
+++ b/index.html
@@ -1,69 +1,45 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>VisionBoard 360 — Support</title>
-  
+  <meta charset="utf-8" />
+  <title>VisionBoard 360 — Legal</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    :root { --bg:#fafafa; --fg:#111; --muted:#666; --card:#fff; --link:#4f46e5; }
-    * { box-sizing: border-box; }
-    body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; background: var(--bg); color: var(--fg); margin: 0; }
-    header { background:#111; color:#fff; padding: 24px 16px; }
-    header h1 { margin: 0; font-size: 24px; }
-    nav { margin-top: 8px; }
-    nav a { color:#fff; text-decoration: none; margin-right: 14px; font-weight: 500; }
-    nav a:hover { text-decoration: underline; }
-    main { max-width: 860px; margin: 0 auto; padding: 24px 16px; }
-    .card { background: var(--card); border-radius: 12px; padding: 20px; box-shadow: 0 1px 3px rgba(0,0,0,.08); margin: 16px 0; }
-    h2, h3 { margin-top: 0; }
-    .muted { color: var(--muted); }
-    a { color: var(--link); }
-    footer { text-align:center; color:#666; padding: 28px 16px; }
-    ul { margin-left: 1.2em; }
+    :root { --fg:#0b0b0c; --muted:#6b7280; --bg:#fafafa; --card:#ffffff; --link:#2563eb; }
+    *{box-sizing:border-box} body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Inter,Ubuntu,Arial,sans-serif;color:var(--fg);background:var(--bg)}
+    header{padding:24px 16px;background:var(--card);border-bottom:1px solid #eee}
+    .wrap{max-width:880px;margin:0 auto;padding:0 16px}
+    h1{margin:0 0 4px;font-size:24px} .muted{color:var(--muted);font-size:14px}
+    nav{margin-top:12px;display:flex;gap:16px;flex-wrap:wrap}
+    nav a{color:var(--link);text-decoration:none} nav a:hover{text-decoration:underline}
+    main{padding:28px 16px}
+    .card{background:var(--card);border:1px solid #eee;border-radius:12px;padding:20px}
+    ul{margin:8px 0 0 20px}
   </style>
-
 </head>
 <body>
-  
 <header>
-  <h1>VisionBoard 360 — Support</h1>
-  <nav>
-    <a href="./index.html">Support</a>
-    <a href="./privacy.html">Privacy</a>
-    <a href="./terms.html">Terms</a>
-  </nav>
+  <div class="wrap">
+    <h1>VisionBoard 360 — Legal</h1>
+    <div class="muted">Last updated: October 23, 2025</div>
+    <nav>
+      <a href="./privacy.html">Privacy Policy</a>
+      <a href="./terms.html">Terms & Conditions</a>
+    </nav>
+  </div>
 </header>
-
-  <main>
-    <section class="card">
-      <h2>Contact us</h2>
-      <p>Email: <a href="mailto:visionboard360team@gmail.com">visionboard360team@gmail.com</a></p>
-      <p>We typically reply within 1–2 business days.</p>
-    </section>
-
-    <section class="card">
-      <h2>FAQs</h2>
-      <ul>
-        <li><strong>Restore purchase:</strong> When onboarding tap <em>Restore Purchases</em>.</li>
-        <li><strong>Photos access:</strong> iOS Settings → Privacy &amp; Security → Photos → VisionBoard 360 → choose <em>Selected Photos</em> or <em>None</em>.</li>
-      </ul>
-    </section>
-
-    <section class="card">
-      <h2>Privacy & Terms</h2>
-      <p>Read our <a href="./privacy.html">Privacy Policy</a> and <a href="./terms.html">Terms of Use</a>.</p>
-    </section>
-
-    <section class="card">
-      <h2>Troubleshooting</h2>
-      <ul>
-        <li>Purchase not showing? Tap <em>Restore Purchases</em> on the paywall.</li>
-        <li>Crash or bug? Email us with your device model and iOS version.</li>
-        <li>Refunds for App Store purchases are handled by Apple: <a href="https://reportaproblem.apple.com/">reportaproblem.apple.com</a>.</li>
-      </ul>
-    </section>
-  </main>
-  <footer>© 2025 VisionBoard 360</footer>
+<main class="wrap">
+  <div class="card">
+    <h2>Overview</h2>
+    <p>
+      This space houses our Privacy Policy and Terms & Conditions for the VisionBoard 360 app.
+      For quick access, use the links above.
+    </p>
+    <ul>
+      <li><a href="./privacy.html">Read the Privacy Policy</a> — how we collect, use, and share data, including for marketing/ads tracking.</li>
+      <li><a href="./terms.html">Read the Terms & Conditions</a> — rules for using the app, subscriptions, and disclaimers.</li>
+    </ul>
+  </div>
+</main>
 </body>
 </html>
