--- a/privacy.html
+++ b/privacy.html
@@ -1,104 +1,109 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Privacy Policy | VisionBoard 360</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+  <meta charset="utf-8" />
+  <title>VisionBoard 360 — Privacy Policy</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    :root { --bg:#fafafa; --fg:#111; --muted:#666; --card:#fff; --link:#4f46e5; }
-    * { box-sizing: border-box; }
-    body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; background: var(--bg); color: var(--fg); margin: 0; }
-    header { background:#111; color:#fff; padding: 24px 16px; }
-    header h1 { margin: 0; font-size: 24px; }
-    nav { margin-top: 8px; }
-    nav a { color:#fff; text-decoration: none; margin-right: 14px; font-weight: 500; }
-    nav a:hover { text-decoration: underline; }
-    main { max-width: 860px; margin: 0 auto; padding: 24px 16px; }
-    .card { background: var(--card); border-radius: 12px; padding: 20px; box-shadow: 0 1px 3px rgba(0,0,0,.08); margin: 16px 0; }
-    h2, h3 { margin-top: 0; }
-    .muted { color: var(--muted); }
-    a { color: var(--link); }
-    footer { text-align:center; color:#666; padding: 28px 16px; }
-    ul { margin-left: 1.2em; }
+    :root { --fg:#0b0b0c; --muted:#6b7280; --bg:#fafafa; --card:#ffffff; --link:#2563eb; }
+    *{box-sizing:border-box} body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Inter,Ubuntu,Arial,sans-serif;color:var(--fg);background:var(--bg)}
+    header{padding:24px 16px;background:var(--card);border-bottom:1px solid #eee}
+    .wrap{max-width:880px;margin:0 auto;padding:0 16px}
+    h1{margin:0 0 4px;font-size:24px} .muted{color:var(--muted);font-size:14px}
+    nav{margin-top:12px;display:flex;gap:16px;flex-wrap:wrap}
+    nav a{color:var(--link);text-decoration:none} nav a:hover{text-decoration:underline}
+    main{padding:28px 16px}
+    .card{background:var(--card);border:1px solid #eee;border-radius:12px;padding:20px}
+    h2{margin-top:18px}
+    ul{margin:8px 0 0 20px}
   </style>
-
 </head>
 <body>
-  
 <header>
-  <h1>Privacy Policy</h1>
-  <nav>
-    <a href="./index.html">Support</a>
-    <a href="./privacy.html">Privacy</a>
-    <a href="./terms.html">Terms</a>
-  </nav>
+  <div class="wrap">
+    <h1>Privacy Policy</h1>
+    <div class="muted">Applies to the VisionBoard 360 mobile app • Updated: October 23, 2025</div>
+    <nav>
+      <a href="./index.html">Back</a>
+      <a href="./terms.html">Terms & Conditions</a>
+    </nav>
+  </div>
 </header>
+<main class="wrap">
+  <article class="card">
+    <p>
+      This Privacy Policy explains how VisionBoard 360 (“VisionBoard,” “we,” “us”) collects, uses, and shares information.
+      You can use the app without consenting to marketing tracking; if you opt out, we’ll still collect data needed to run the app (e.g., security and purchases).
+    </p>
 
-  <main>
-    <div class="card">
-      <p class="muted">Effective October 07, 2025</p>
-      <p>This Privacy Policy explains how <strong>Diego Pineda</strong> (“we,” “us,” or “our”) collects, uses, and shares information when you use the <strong>VisionBoard</strong> mobile application (the “App”).</p>
+    <h2>1) Information we collect</h2>
+    <ul>
+      <li><strong>Identifiers & device info</strong>: advertising identifiers (e.g., IDFA/GAID when permitted), device model/OS, language, time zone, IP, app version.</li>
+      <li><strong>App activity & events</strong>: installs, opens, sessions, screens, taps, subscription/purchase events (via RevenueCat), crash/performance data.</li>
+      <li><strong>Account/support</strong>: info you provide in support requests (e.g., email, message content).</li>
+    </ul>
+    <p><em>We do not collect photos, contacts, or precise GPS without your explicit permission for a specific feature.</em></p>
 
-      <h2>Summary</h2>
-      <ul>
-        <li>We collect the minimum data needed to operate the App and process in-app purchases.</li>
-        <li>We do <strong>not</strong> sell or share your personal information for cross-context behavioral advertising.</li>
-        <li>The App does not use third-party advertising or tracking.</li>
-        <li>Questions? Contact <a href="mailto:visionboard360team@gmail.com">visionboard360team@gmail.com</a>.</li>
-      </ul>
+    <h2>2) How we use information</h2>
+    <ul>
+      <li>Provide, maintain, and secure the app</li>
+      <li>Process purchases and manage subscriptions</li>
+      <li>Measure performance and improve features</li>
+      <li><strong>Market VisionBoard and measure campaign performance</strong></li>
+      <li><strong>Personalize or limit ads and offers (with consent where required)</strong></li>
+    </ul>
 
-      <h2>Information We Collect</h2>
-      <p>Depending on how you use the App and which optional features you enable, we may process the following:</p>
-      <ul>
-        <li><strong>Purchase information</strong> (required for premium unlock): transaction receipts, product IDs, and purchase status provided by Apple; purchase verification via a service such as RevenueCat.</li>
-        <li><strong>Diagnostics</strong> (to improve stability): crash logs and performance data (e.g., via Sentry or similar).</li>
-        <li><strong>Usage data (optional)</strong>: basic, aggregate events about which screens/features are used to guide improvements. No ad tracking.</li>
-        <li><strong>User content</strong>: images/notes/boards you create. By default these live on your device; if you enable cloud sync/backup (e.g., Firebase or iCloud), your content will be transmitted and stored there under your account.</li>
-        <li><strong>Support communications</strong>: any information you send us by email or in-app support.</li>
-      </ul>
+    <h2>3) Tracking for marketing & advertising</h2>
+    <p><strong>We collect and use certain data for marketing and advertising (“tracking”)</strong>, including advertising identifiers and in-app events, to:</p>
+    <ul>
+      <li>attribute installs and actions to ad campaigns,</li>
+      <li>build/measure audiences (e.g., “installed but not subscribed”),</li>
+      <li>limit ad frequency and improve relevance (where allowed).</li>
+    </ul>
+    <p>We may share limited data with <strong>marketing and measurement partners</strong> (e.g., <em>Tenjin</em> for attribution; <em>TikTok/Meta</em> for ads; <em>RevenueCat</em> for purchase analytics/entitlements) under their own privacy terms. We do not sell your personal information for money. In some regions (e.g., California), this data use may be considered “sharing” for cross-context behavioral advertising. You can opt out—see Section 7.</p>
 
-      <h2>How We Use Information</h2>
-      <ul>
-        <li>Provide core functionality (including unlocking purchases and restoring on the same Apple ID).</li>
-        <li>Maintain and improve the App (e.g., diagnose crashes, measure reliability).</li>
-        <li>Communicate about updates, security, and support.</li>
-        <li>Comply with legal obligations and enforce our Terms.</li>
-      </ul>
+    <h2>4) Legal bases (EEA/UK)</h2>
+    <ul>
+      <li><strong>Contract</strong>: provide the app/services</li>
+      <li><strong>Legitimate interests</strong>: app analytics, fraud prevention, product improvement</li>
+      <li><strong>Consent</strong>: ads/marketing tracking (including using IDFA/GAID)</li>
+    </ul>
 
-      <h2>Sharing</h2>
-      <p>We share information only as needed to run the App or when required by law:</p>
-      <ul>
-        <li><strong>Processors/Service providers</strong>: Apple (payments), purchase verification (e.g., RevenueCat), diagnostics (e.g., Sentry), and optional cloud storage/sync (e.g., Firebase/iCloud if enabled).</li>
-        <li><strong>Legal and safety</strong>: to comply with law, protect rights, or respond to lawful requests.</li>
-      </ul>
-      <p>We do not sell personal information and we do not permit cross-site tracking.</p>
+    <h2>5) Data retention</h2>
+    <p>We retain data as long as needed for the purposes above and then delete or de-identify it, subject to legal requirements.</p>
 
-      <h2>Data Retention</h2>
-      <p>We keep information only as long as needed to provide the App and meet legal obligations. If you enable cloud sync, you may delete your content using your cloud provider’s tools. You may request deletion of support records at any time.</p>
+    <h2>6) Children</h2>
+    <p>The app is not directed to children under 13 (or the minimum age in your region). We do not knowingly collect children’s personal information.</p>
 
-      <h2>Your Rights</h2>
-      <p>Depending on your region, you may have rights to access, correct, delete, or restrict use of your data. To exercise these rights, email <a href="mailto:visionboard360team@gmail.com">visionboard360team@gmail.com</a>.</p>
+    <h2>7) Your choices & rights</h2>
+    <ul>
+      <li><strong>Opt-out of marketing tracking</strong>:
+        <ul>
+          <li><em>In-app (when available)</em>: Settings → Privacy → “Limit Ads & Tracking.”</li>
+          <li><em>iOS</em>: Settings → Privacy &amp; Security → Tracking (disable app tracking) and reset the Advertising Identifier.</li>
+          <li><em>Android</em>: Google settings → Ads → Delete advertising ID / Opt out of Ads Personalization.</li>
+        </ul>
+      </li>
+      <li><strong>Permissions</strong>: manage notifications and other permissions in your device settings.</li>
+      <li><strong>Regional rights</strong>: depending on your location, you may request access, deletion, correction, portability, and to opt out of “sale”/“sharing.”</li>
+      <li><strong>Submit requests</strong>: email <a href="mailto:privacy@visionboard360.app">privacy@visionboard360.app</a> with subject “Privacy Request.”</li>
+    </ul>
 
-      <h2>Security</h2>
-      <p>We use reasonable safeguards to protect information. No method of transmission or storage is 100% secure.</p>
+    <h2>8) Data sharing</h2>
+    <p>We share information with service providers (hosting, analytics, support), marketing/measurement partners (as above), authorities when required by law, and during business transfers. Recipients must handle data as instructed and per law.</p>
 
-      <h2>Children</h2>
-      <p>The App is not directed to children under 13 (or the minimum age in your jurisdiction), and we do not knowingly collect data from children.</p>
+    <h2>9) International transfers</h2>
+    <p>We may transfer information outside your country and use appropriate safeguards (e.g., SCCs) where required.</p>
 
-      <h2>International Transfers</h2>
-      <p>Information may be processed in countries other than where you live. Where required, we use appropriate safeguards.</p>
+    <h2>10) Security</h2>
+    <p>We use technical and organizational measures to protect data; no method is 100% secure.</p>
 
-      <h2>Changes</h2>
-      <p>We may update this Policy. We will change the “Effective” date and, where required, provide notice in the App.</p>
+    <h2>11) Changes</h2>
+    <p>We’ll post updates here and adjust the “updated” date above. Material changes may be shown in-app.</p>
 
-      <h2>Contact</h2>
-      <p>Contact: <a href="mailto:visionboard360team@gmail.com">visionboard360team@gmail.com</a>.</p>
-
-      <hr>
-      <p class="muted"><small>This is a general privacy disclosure for a consumer app and is not legal advice.</small></p>
-    </div>
-  </main>
-  <footer>© 2025 VisionBoard 360</footer>
+    <h2>12) Contact</h2>
+    <p>Email: <a href="mailto:privacy@visionboard360.app">privacy@visionboard360.app</a></p>
+  </article>
+</main>
 </body>
 </html>
