--- a/terms.html
+++ b/terms.html
@@ -1,65 +1,68 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Terms of Use | VisionBoard 360</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+  <meta charset="utf-8" />
+  <title>VisionBoard 360 — Terms & Conditions</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    :root { --bg:#fafafa; --fg:#111; --muted:#666; --card:#fff; --link:#4f46e5; }
-    * { box-sizing: border-box; }
-    body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; background: var(--bg); color: var(--fg); margin: 0; }
-    header { background:#111; color:#fff; padding: 24px 16px; }
-    header h1 { margin: 0; font-size: 24px; }
-    nav { margin-top: 8px; }
-    nav a { color:#fff; text-decoration: none; margin-right: 14px; font-weight: 500; }
-    nav a:hover { text-decoration: underline; }
-    main { max-width: 860px; margin: 0 auto; padding: 24px 16px; }
-    .card { background: var(--card); border-radius: 12px; padding: 20px; box-shadow: 0 1px 3px rgba(0,0,0,.08); margin: 16px 0; }
-    h2, h3 { margin-top: 0; }
-    .muted { color: var(--muted); }
-    a { color: var(--link); }
-    footer { text-align:center; color:#666; padding: 28px 16px; }
-    ul { margin-left: 1.2em; }
+    :root { --fg:#0b0b0c; --muted:#6b7280; --bg:#fafafa; --card:#ffffff; --link:#2563eb; }
+    *{box-sizing:border-box} body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Inter,Ubuntu,Arial,sans-serif;color:var(--fg);background:var(--bg)}
+    header{padding:24px 16px;background:var(--card);border-bottom:1px solid #eee}
+    .wrap{max-width:880px;margin:0 auto;padding:0 16px}
+    h1{margin:0 0 4px;font-size:24px} .muted{color:var(--muted);font-size:14px}
+    nav{margin-top:12px;display:flex;gap:16px;flex-wrap:wrap}
+    nav a{color:var(--link);text-decoration:none} nav a:hover{text-decoration:underline}
+    main{padding:28px 16px}
+    .card{background:var(--card);border:1px solid #eee;border-radius:12px;padding:20px}
+    h2{margin-top:18px}
+    ul{margin:8px 0 0 20px}
   </style>
-
 </head>
 <body>
-  
 <header>
-  <h1>Terms of Use</h1>
-  <nav>
-    <a href="./index.html">Support</a>
-    <a href="./privacy.html">Privacy</a>
-    <a href="./terms.html">Terms</a>
-  </nav>
+  <div class="wrap">
+    <h1>Terms & Conditions</h1>
+    <div class="muted">Applies to the VisionBoard 360 mobile app • Updated: October 23, 2025</div>
+    <nav>
+      <a href="./index.html">Back</a>
+      <a href="./privacy.html">Privacy Policy</a>
+    </nav>
+  </div>
 </header>
+<main class="wrap">
+  <article class="card">
+    <p>These Terms govern your use of VisionBoard 360. By using the app, you agree to them.</p>
 
-  <main>
-    <div class="card">
-      <p class="muted">Effective October 07, 2025</p>
-      <h2>1. Agreement</h2>
-      <p>By downloading or using VisionBoard 360 (the “App”), you agree to these Terms of Use. If you do not agree, do not use the App.</p>
-      <h2>2. License</h2>
-      <p>We grant you a personal, non-transferable, non-exclusive license to use the App on devices you own or control, subject to these Terms and Apple’s Store Terms.</p>
-      <h2>3. Purchases</h2>
-      <p>The App is free to download. A one-time in-app purchase unlocks additional features. Purchases are processed by Apple. You can restore your purchase using the “Restore Purchases” option.</p>
-      <h2>4. User Content</h2>
-      <p>You are responsible for content you create or import. You must have rights to any images or materials you use.</p>
-      <h2>5. Privacy</h2>
-      <p>Our <a href="./privacy.html">Privacy Policy</a> explains how we handle information.</p>
-      <h2>6. Acceptable Use</h2>
-      <p>Do not misuse the App, interfere with its operation, or attempt to access it by unauthorized means.</p>
-      <h2>7. Disclaimer</h2>
-      <p>The App is provided “as is” without warranties. To the fullest extent permitted by law, we disclaim all implied warranties of merchantability, fitness for a particular purpose, and non-infringement.</p>
-      <h2>8. Limitation of Liability</h2>
-      <p>To the extent permitted by law, we are not liable for indirect, incidental, or consequential damages arising from use of the App.</p>
-      <h2>9. Changes</h2>
-      <p>We may update these Terms from time to time. Continued use after updates constitutes acceptance.</p>
-      <h2>10. Contact</h2>
-      <p>Questions? Email <a href="mailto:visionboard360team@gmail.com">visionboard360team@gmail.com</a>.</p>
-    </div>
-  </main>
-  <footer>© 2025 VisionBoard 360</footer>
+    <h2>1) Eligibility & Account</h2>
+    <p>You must be legally able to form a contract in your jurisdiction and comply with these Terms.</p>
+
+    <h2>2) Subscriptions & Purchases</h2>
+    <p>Subscriptions/purchases are processed by Apple/Google and managed in-app via RevenueCat. Prices, billing periods, and trials are shown in-app. Cancel in your platform settings before renewal to avoid future charges. Taxes may apply.</p>
+
+    <h2>3) Acceptable Use</h2>
+    <p>Don’t misuse the app (e.g., reverse engineer, disrupt service, infringe IP, or use the app for unlawful purposes).</p>
+
+    <h2>4) Marketing, Analytics & Tracking</h2>
+    <p>We collect and use certain data for marketing and advertising (tracking) as described in our <a href="./privacy.html">Privacy Policy</a>. Where required (e.g., Apple’s ATT), we will request your consent before accessing advertising identifiers or linking data across apps/sites. You can opt out as described in the Privacy Policy.</p>
+
+    <h2>5) Third-Party Services</h2>
+    <p>The app may integrate third-party SDKs and services (e.g., attribution, analytics, ads). Those services are governed by their own terms and privacy policies.</p>
+
+    <h2>6) Intellectual Property</h2>
+    <p>We (or our licensors) own the app, content, and trademarks. You receive a limited, revocable, non-transferable license to use the app for personal, non-commercial purposes.</p>
+
+    <h2>7) Disclaimers & Limitation of Liability</h2>
+    <p>The app is provided “as is” and “as available.” To the fullest extent allowed by law, we disclaim warranties and limit liability for indirect or consequential damages. Some jurisdictions don’t allow certain limitations—your rights may vary.</p>
+
+    <h2>8) Termination</h2>
+    <p>We may suspend or terminate access for violations or risks to the service. You may stop using the app at any time. Sections that by nature should survive will survive.</p>
+
+    <h2>9) Changes</h2>
+    <p>We may update these Terms; continued use after changes means you accept the revised Terms.</p>
+
+    <h2>10) Contact</h2>
+    <p>Email: <a href="mailto:support@visionboard360.app">support@visionboard360.app</a></p>
+  </article>
+</main>
 </body>
 </html>
