--- a/privacy.html
+++ b/privacy.html
@@ -102,7 +102,7 @@
     <p>We’ll post updates here and adjust the “updated” date above. Material changes may be shown in-app.</p>
 
     <h2>12) Contact</h2>
-    <p>Email: <a href="mailto:privacy@visionboard360.app">privacy@visionboard360.app</a></p>
+    <p>Email: <a href="mailto:visionboard360team@gmail.com">privacy@visionboard360.app</a></p>
   </article>
 </main>
 </body>
