--- a/terms.html
+++ b/terms.html
@@ -61,7 +61,7 @@
     <p>We may update these Terms; continued use after changes means you accept the revised Terms.</p>
 
     <h2>10) Contact</h2>
-    <p>Email: <a href="mailto:support@visionboard360.app">support@visionboard360.app</a></p>
+    <p>Email: <a href="mailto:visionboard360team@gmail.com">support@visionboard360.app</a></p>
   </article>
 </main>
 </body>
